--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,16 +56,18 @@ jobs:
         if [[ "$(uname -s)" == "Linux" ]];
         then
           which x86_64-conda-linux-gnu-gcc
+          x86_64-conda-linux-gnu-gcc -v
+          x86_64-conda-linux-gnu-g++ -v
         else
           which clang
+          clang -v
         fi
         if [[ "$(uname -s)" == "Linux" ]]; 
         then
           sudo apt-get update && sudo apt-get install r-base
           sudo R -e 'install.packages("Rcpp", repos="http://lib.stat.cmu.edu/R/CRAN/")' 
         fi
-        $CC_FOR_BUILD -v 
-        $CXX_FOR_BUILD -v
+        h5c++ -v
         pushd sucpp
         make test
         make main
