--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,8 @@ jobs:
         else
           which clang
           clang -v
+          # Workaround for system linker issues
+          sudo mv /Library/Developer/CommandLineTools /Library/Developer/CommandLineTools.org
         fi
         which h5c++
         pushd sucpp
