Add MacOS workaround

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,8 +66,10 @@ jobs:
         else
           which clang
           clang -v
+          echo "Note: Upgrading xcode"
           # Workaround for system linker issues
           sudo mv /Library/Developer/CommandLineTools /Library/Developer/CommandLineTools.org
+          sudoo xcode-select --install
         fi
         which h5c++
         pushd sucpp
