--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,6 +77,7 @@ jobs:
         which h5c++
         if [[ "$(uname -s)" == "Linux" ]];
         then
+          ORGPATH=$PATH
           # Enable OpenACC build
           curl -s -S -o nvhpc_2020.tar.gz  https://developer.download.nvidia.com/hpc-sdk/20.9/nvhpc_2020_209_Linux_x86_64_cuda_11.0.tar.gz
           tar xpzf nvhpc_2020.tar.gz
@@ -112,6 +113,12 @@ jobs:
         make test
         make main
         make api
+        if [[ "$(uname -s)" == "Linux" ]];
+        then
+          # the ACC_CXX not needed anymore
+          export PATH=$ORGPATH
+          unset ACC_CXX
+        fi
         make capi_test
         if [[ "$(uname -s)" == "Linux" ]]; 
         then
