Revert "Force v9.3 on all impoortant libraries"
This reverts commit 11842415fb43b48c5e12dd54bb4c8574de331879.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,9 +50,7 @@ jobs:
         fi
         if [[ "$(uname -s)" == "Linux" ]];
         then
-          conda create --yes -n unifrac -c conda-forge -c bioconda python=3.6 \
-              libgomp=9.3 libgcc-ng=9.3 libgcc-devel_linux-64=9.3 libstdcxx-ng=9.3 gxx_linux-64=9.3 \
-              libgfortran5=9.3 libgfortran-ng=9.3
+          conda create --yes -n unifrac -c conda-forge -c bioconda python=3.6 gxx_linux-64=9.3
         else
           conda create --yes -n unifrac -c conda-forge -c bioconda python=3.6 clangxx_osx-64=10.0.0
         fi
