--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,6 @@ jobs:
         if [[ "$(uname -s)" == "Linux" ]];
         then
           sudo apt-get update && sudo apt-get install r-base
-          sudo R -e 'install.packages("Rcpp", repos="http://lib.stat.cmu.edu/R/CRAN/")'
         else
           ls -l /Applications/
           # coonda clang does not like xcode 12
@@ -115,6 +114,8 @@ jobs:
         make capi_test
         if [[ "$(uname -s)" == "Linux" ]]; 
         then
+          conda install --yes r-base
+          R -e 'install.packages("Rcpp", repos="http://lib.stat.cmu.edu/R/CRAN/")'
           make rapi_test
         fi
         popd
