Use a clean build for R tests

--- a/sucpp/Makefile
+++ b/sucpp/Makefile
@@ -112,8 +112,8 @@ rapi_test: main
 	echo CXX1X=h5c++ > ~/.R/Makevars
 	echo CXX=h5c++ >> ~/.R/Makevars 
 	echo CC=h5c++ >> ~/.R/Makevars
-	echo CXXFLAGS=$(CPPFLAGS) >> ~/.R/Makevars
-	echo LDFLAGS=$(LDDFLAGS) -llz4 $(BLASLIB) >> ~/.R/Makevars
+	echo LDFLAGS -llz4 $(BLASLIB) >> ~/.R/Makevars
+        rm -f *.o
 	Rscript R_interface/rapi_test.R
 	
 api: tree.o biom.o unifrac.o cmd.o skbio_alt.o api.o $(UNIFRAC_FILES)
