--- a/sucpp/Makefile
+++ b/sucpp/Makefile
@@ -112,7 +112,7 @@ rapi_test: main
 	echo CXX1X=h5c++ > ~/.R/Makevars
 	echo CXX=h5c++ >> ~/.R/Makevars 
 	echo CC=h5c++ >> ~/.R/Makevars
-	echo LDFLAGS -llz4 $(BLASLIB) >> ~/.R/Makevars
+	echo LDFLAGS= -llz4 $(BLASLIB) >> ~/.R/Makevars
 	rm -f *.o
 	Rscript R_interface/rapi_test.R
 	rm -f *.o
