Revert "Add missing library"
This reverts commit 880c3d550ccfc808431d02867362a2aa7a8938a4.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,10 +40,8 @@ jobs:
     - name: Install 
       shell: bash -l {0}
       run: |
-        if [[ "$(uname -s)" == "Linux" ]];
+        if [[ "$(uname -s)" != "Linux" ]];
         then
-          sudo apt-get update && sudo apt-get install libreadline-dev
-        else
           ls -l /Applications/
           # coonda clang does not like xcode 12
           sudo xcode-select --switch /Applications/Xcode_11.7.app
